--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         <div class="row align-items-center">
                             <div class="col-xl-4 col-lg-4">
                                 <div class="footer-social">
-                                    <a href="https://github.com/BitMavrick"><i class="fab fa-github"></i></a>
+                                    <a href="https://github.com/nipundissanayaka"><i class="fab fa-github"></i></a>
 
                                     <a href=" https://www.linkedin.com/in/nipun-dissanayaka/"><i
                                             class="fab fa-linkedin-in"></i></a>
